reference/5.1/Microsoft.PowerShell.Core/Microsoft.PowerShell.Core.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=390782
Help Version: 5.2.0.0
keywords: powershell,cmdlet
Locale: en-US
Module Guid: 00000000-0000-0000-0000-000000000000
Module Name: Microsoft.PowerShell.Core
ms.date: 06/09/2017
schema: 2.0.0
title: Micro soft. Power shell. core
ms.openlocfilehash: 2292aa015ff3471ac7febdda94e1a10e895dea27
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: nl-NL
ms.lasthandoff: 10/07/2020
ms.locfileid: "93251977"
---
# <span data-ttu-id="c3533-103">Module micro soft. Power shell. core</span><span class="sxs-lookup"><span data-stu-id="c3533-103">Microsoft.PowerShell.Core Module</span></span>

## <span data-ttu-id="c3533-104">Beschrijving</span><span class="sxs-lookup"><span data-stu-id="c3533-104">Description</span></span>

<span data-ttu-id="c3533-105">Deze sectie bevat de Help-onderwerpen voor de cmdlets die zijn geïnstalleerd met de module Power shell micro soft. Power shell. core.</span><span class="sxs-lookup"><span data-stu-id="c3533-105">This section contains the help topics for the cmdlets that are installed with PowerShell Microsoft.PowerShell.Core module.</span></span> <span data-ttu-id="c3533-106">De kern module bevat cmdlets en providers die de basis functies van Power shell beheren.</span><span class="sxs-lookup"><span data-stu-id="c3533-106">The Core module contains cmdlets and providers that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="c3533-107">Micro soft. Power shell. core-cmdlets</span><span class="sxs-lookup"><span data-stu-id="c3533-107">Microsoft.PowerShell.Core Cmdlets</span></span>

### [<span data-ttu-id="c3533-108">Toevoegen-geschiedenis</span><span class="sxs-lookup"><span data-stu-id="c3533-108">Add-History</span></span>](Add-History.md)
<span data-ttu-id="c3533-109">Hiermee worden items toegevoegd aan de sessie geschiedenis.</span><span class="sxs-lookup"><span data-stu-id="c3533-109">Appends entries to the session history.</span></span>

### [<span data-ttu-id="c3533-110">Add-PSSnapin</span><span class="sxs-lookup"><span data-stu-id="c3533-110">Add-PSSnapin</span></span>](Add-PSSnapin.md)
<span data-ttu-id="c3533-111">Hiermee voegt u een of meer Windows Power shell-modules toe aan de huidige sessie.</span><span class="sxs-lookup"><span data-stu-id="c3533-111">Adds one or more Windows PowerShell snap-ins to the current session.</span></span>

### [<span data-ttu-id="c3533-112">Wissen-geschiedenis</span><span class="sxs-lookup"><span data-stu-id="c3533-112">Clear-History</span></span>](Clear-History.md)
<span data-ttu-id="c3533-113">Hiermee verwijdert u vermeldingen uit de geschiedenis van de Power shell-sessie opdracht.</span><span class="sxs-lookup"><span data-stu-id="c3533-113">Deletes entries from the PowerShell session command history.</span></span>

### [<span data-ttu-id="c3533-114">Wissen-host</span><span class="sxs-lookup"><span data-stu-id="c3533-114">Clear-Host</span></span>](Clear-Host.md)
<span data-ttu-id="c3533-115">Hiermee wordt de weer gave in het hostprogramma gewist.</span><span class="sxs-lookup"><span data-stu-id="c3533-115">Clears the display in the host program.</span></span>

### [<span data-ttu-id="c3533-116">Connect-PSSession</span><span class="sxs-lookup"><span data-stu-id="c3533-116">Connect-PSSession</span></span>](Connect-PSSession.md)
<span data-ttu-id="c3533-117">Opnieuw verbinding maken met verbroken sessies.</span><span class="sxs-lookup"><span data-stu-id="c3533-117">Reconnects to disconnected sessions.</span></span>

### [<span data-ttu-id="c3533-118">Fout opsporing-taak</span><span class="sxs-lookup"><span data-stu-id="c3533-118">Debug-Job</span></span>](Debug-Job.md)
<span data-ttu-id="c3533-119">De uitvoering van een actieve achtergrond, externe of Windows Power shell-werk stroom taak wordt ongebruikt.</span><span class="sxs-lookup"><span data-stu-id="c3533-119">Debugs a running background, remote, or Windows PowerShell Workflow job.</span></span>

### [<span data-ttu-id="c3533-120">Disable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="c3533-120">Disable-PSRemoting</span></span>](Disable-PSRemoting.md)
<span data-ttu-id="c3533-121">Hiermee voor komt u dat Power shell-eind punten externe verbindingen ontvangen.</span><span class="sxs-lookup"><span data-stu-id="c3533-121">Prevents PowerShell endpoints from receiving remote connections.</span></span>

### [<span data-ttu-id="c3533-122">Disable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="c3533-122">Disable-PSSessionConfiguration</span></span>](Disable-PSSessionConfiguration.md)
<span data-ttu-id="c3533-123">Hiermee schakelt u de sessie configuraties op de lokale computer uit.</span><span class="sxs-lookup"><span data-stu-id="c3533-123">Disables session configurations on the local computer.</span></span>

### [<span data-ttu-id="c3533-124">Verbinding verbreken-PSSession</span><span class="sxs-lookup"><span data-stu-id="c3533-124">Disconnect-PSSession</span></span>](Disconnect-PSSession.md)
<span data-ttu-id="c3533-125">Verbreekt de verbinding met een sessie.</span><span class="sxs-lookup"><span data-stu-id="c3533-125">Disconnects from a session.</span></span>

### [<span data-ttu-id="c3533-126">Enable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="c3533-126">Enable-PSRemoting</span></span>](Enable-PSRemoting.md)
<span data-ttu-id="c3533-127">Hiermee configureert u de computer voor het ontvangen van externe opdrachten.</span><span class="sxs-lookup"><span data-stu-id="c3533-127">Configures the computer to receive remote commands.</span></span>

### [<span data-ttu-id="c3533-128">Enable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="c3533-128">Enable-PSSessionConfiguration</span></span>](Enable-PSSessionConfiguration.md)
<span data-ttu-id="c3533-129">Hiermee schakelt u de sessie configuraties in op de lokale computer.</span><span class="sxs-lookup"><span data-stu-id="c3533-129">Enables the session configurations on the local computer.</span></span>

### [<span data-ttu-id="c3533-130">Enter-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="c3533-130">Enter-PSHostProcess</span></span>](Enter-PSHostProcess.md)
<span data-ttu-id="c3533-131">Hiermee maakt u verbinding met en voert u een interactieve sessie in met een lokaal proces.</span><span class="sxs-lookup"><span data-stu-id="c3533-131">Connects to and enters into an interactive session with a local process.</span></span>

### [<span data-ttu-id="c3533-132">Enter-PSSession</span><span class="sxs-lookup"><span data-stu-id="c3533-132">Enter-PSSession</span></span>](Enter-PSSession.md)
<span data-ttu-id="c3533-133">Start een interactieve sessie met een externe computer.</span><span class="sxs-lookup"><span data-stu-id="c3533-133">Starts an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="c3533-134">Afsluiten-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="c3533-134">Exit-PSHostProcess</span></span>](Exit-PSHostProcess.md)
<span data-ttu-id="c3533-135">Hiermee sluit u een interactieve sessie met een lokaal proces.</span><span class="sxs-lookup"><span data-stu-id="c3533-135">Closes an interactive session with a local process.</span></span>

### [<span data-ttu-id="c3533-136">Afsluiten-PSSession</span><span class="sxs-lookup"><span data-stu-id="c3533-136">Exit-PSSession</span></span>](Exit-PSSession.md)
<span data-ttu-id="c3533-137">Hiermee beëindigt u een interactieve sessie met een externe computer.</span><span class="sxs-lookup"><span data-stu-id="c3533-137">Ends an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="c3533-138">Exporteren-console</span><span class="sxs-lookup"><span data-stu-id="c3533-138">Export-Console</span></span>](Export-Console.md)
<span data-ttu-id="c3533-139">Exporteert de namen van modules in de huidige sessie naar een console bestand.</span><span class="sxs-lookup"><span data-stu-id="c3533-139">Exports the names of snap-ins in the current session to a console file.</span></span>

### [<span data-ttu-id="c3533-140">Exporteren-ModuleMember</span><span class="sxs-lookup"><span data-stu-id="c3533-140">Export-ModuleMember</span></span>](Export-ModuleMember.md)
<span data-ttu-id="c3533-141">Hiermee geeft u de module leden op die worden geëxporteerd.</span><span class="sxs-lookup"><span data-stu-id="c3533-141">Specifies the module members that are exported.</span></span>

### [<span data-ttu-id="c3533-142">ForEach-object</span><span class="sxs-lookup"><span data-stu-id="c3533-142">ForEach-Object</span></span>](ForEach-Object.md)
<span data-ttu-id="c3533-143">Hiermee wordt een bewerking uitgevoerd voor elk item in een verzameling invoer objecten.</span><span class="sxs-lookup"><span data-stu-id="c3533-143">Performs an operation against each item in a collection of input objects.</span></span>

### [<span data-ttu-id="c3533-144">Get-Command</span><span class="sxs-lookup"><span data-stu-id="c3533-144">Get-Command</span></span>](Get-Command.md)
<span data-ttu-id="c3533-145">Hiermee worden alle opdrachten opgehaald.</span><span class="sxs-lookup"><span data-stu-id="c3533-145">Gets all commands.</span></span>

### [<span data-ttu-id="c3533-146">Get-Help</span><span class="sxs-lookup"><span data-stu-id="c3533-146">Get-Help</span></span>](Get-Help.md)
<span data-ttu-id="c3533-147">Geeft informatie weer over Power shell-opdrachten en-concepten.</span><span class="sxs-lookup"><span data-stu-id="c3533-147">Displays information about PowerShell commands and concepts.</span></span>

### [<span data-ttu-id="c3533-148">Get-geschiedenis</span><span class="sxs-lookup"><span data-stu-id="c3533-148">Get-History</span></span>](Get-History.md)
<span data-ttu-id="c3533-149">Hiermee wordt een lijst opgehaald met de opdrachten die tijdens de huidige sessie zijn ingevoerd.</span><span class="sxs-lookup"><span data-stu-id="c3533-149">Gets a list of the commands entered during the current session.</span></span>

### [<span data-ttu-id="c3533-150">Get-job</span><span class="sxs-lookup"><span data-stu-id="c3533-150">Get-Job</span></span>](Get-Job.md)
<span data-ttu-id="c3533-151">Hiermee worden Power shell-achtergrond taken opgehaald die in de huidige sessie worden uitgevoerd.</span><span class="sxs-lookup"><span data-stu-id="c3533-151">Gets PowerShell background jobs that are running in the current session.</span></span>

### [<span data-ttu-id="c3533-152">Get-module</span><span class="sxs-lookup"><span data-stu-id="c3533-152">Get-Module</span></span>](Get-Module.md)
<span data-ttu-id="c3533-153">Hiermee worden de modules opgehaald die zijn geïmporteerd of die in de huidige sessie kunnen worden geïmporteerd.</span><span class="sxs-lookup"><span data-stu-id="c3533-153">Gets the modules that have been imported or that can be imported into the current session.</span></span>

### [<span data-ttu-id="c3533-154">Get-PSHostProcessInfo</span><span class="sxs-lookup"><span data-stu-id="c3533-154">Get-PSHostProcessInfo</span></span>](Get-PSHostProcessInfo.md)
<span data-ttu-id="c3533-155">Hiermee wordt proces informatie over de Power shell-host opgehaald.</span><span class="sxs-lookup"><span data-stu-id="c3533-155">Gets process information about the PowerShell host.</span></span>

### [<span data-ttu-id="c3533-156">Get-PSSession</span><span class="sxs-lookup"><span data-stu-id="c3533-156">Get-PSSession</span></span>](Get-PSSession.md)
<span data-ttu-id="c3533-157">Hiermee haalt u de Power shell-sessies op lokale en externe computers op.</span><span class="sxs-lookup"><span data-stu-id="c3533-157">Gets the PowerShell sessions on local and remote computers.</span></span>

### [<span data-ttu-id="c3533-158">Get-PSSessionCapability</span><span class="sxs-lookup"><span data-stu-id="c3533-158">Get-PSSessionCapability</span></span>](Get-PSSessionCapability.md)
<span data-ttu-id="c3533-159">Hiermee worden de mogelijkheden van een specifieke gebruiker voor een beperkte sessie configuratie opgehaald.</span><span class="sxs-lookup"><span data-stu-id="c3533-159">Gets the capabilities of a specific user on a constrained session configuration.</span></span>

### [<span data-ttu-id="c3533-160">Get-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="c3533-160">Get-PSSessionConfiguration</span></span>](Get-PSSessionConfiguration.md)
<span data-ttu-id="c3533-161">Hiermee worden de geregistreerde sessie configuraties op de computer opgehaald.</span><span class="sxs-lookup"><span data-stu-id="c3533-161">Gets the registered session configurations on the computer.</span></span>

### [<span data-ttu-id="c3533-162">Get-PSSnapin</span><span class="sxs-lookup"><span data-stu-id="c3533-162">Get-PSSnapin</span></span>](Get-PSSnapin.md)
<span data-ttu-id="c3533-163">Hiermee worden de Windows Power shell-modules op de computer opgehaald.</span><span class="sxs-lookup"><span data-stu-id="c3533-163">Gets the Windows PowerShell snap-ins on the computer.</span></span>

### [<span data-ttu-id="c3533-164">Get-term</span><span class="sxs-lookup"><span data-stu-id="c3533-164">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="c3533-165">Hiermee worden goedgekeurde Power shell-woorden opgehaald.</span><span class="sxs-lookup"><span data-stu-id="c3533-165">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="c3533-166">Import-module</span><span class="sxs-lookup"><span data-stu-id="c3533-166">Import-Module</span></span>](Import-Module.md)
<span data-ttu-id="c3533-167">Hiermee voegt u modules toe aan de huidige sessie.</span><span class="sxs-lookup"><span data-stu-id="c3533-167">Adds modules to the current session.</span></span>

### [<span data-ttu-id="c3533-168">Invoke-opdracht</span><span class="sxs-lookup"><span data-stu-id="c3533-168">Invoke-Command</span></span>](Invoke-Command.md)
<span data-ttu-id="c3533-169">Voert opdrachten uit op lokale en externe computers.</span><span class="sxs-lookup"><span data-stu-id="c3533-169">Runs commands on local and remote computers.</span></span>

### [<span data-ttu-id="c3533-170">Invoke-geschiedenis</span><span class="sxs-lookup"><span data-stu-id="c3533-170">Invoke-History</span></span>](Invoke-History.md)
<span data-ttu-id="c3533-171">Voert opdrachten uit vanuit de sessie geschiedenis.</span><span class="sxs-lookup"><span data-stu-id="c3533-171">Runs commands from the session history.</span></span>

### [<span data-ttu-id="c3533-172">New-module</span><span class="sxs-lookup"><span data-stu-id="c3533-172">New-Module</span></span>](New-Module.md)
<span data-ttu-id="c3533-173">Hiermee maakt u een nieuwe dynamische module die alleen in het geheugen bestaat.</span><span class="sxs-lookup"><span data-stu-id="c3533-173">Creates a new dynamic module that exists only in memory.</span></span>

### [<span data-ttu-id="c3533-174">New-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="c3533-174">New-ModuleManifest</span></span>](New-ModuleManifest.md)
<span data-ttu-id="c3533-175">Hiermee maakt u een nieuw module manifest.</span><span class="sxs-lookup"><span data-stu-id="c3533-175">Creates a new module manifest.</span></span>

### [<span data-ttu-id="c3533-176">New-PSRoleCapabilityFile</span><span class="sxs-lookup"><span data-stu-id="c3533-176">New-PSRoleCapabilityFile</span></span>](New-PSRoleCapabilityFile.md)
<span data-ttu-id="c3533-177">Hiermee maakt u een bestand dat een set mogelijkheden definieert die moeten worden weer gegeven via een sessie configuratie.</span><span class="sxs-lookup"><span data-stu-id="c3533-177">Creates a file that defines a set of capabilities to be exposed through a session configuration.</span></span>

### [<span data-ttu-id="c3533-178">New-PSSession</span><span class="sxs-lookup"><span data-stu-id="c3533-178">New-PSSession</span></span>](New-PSSession.md)
<span data-ttu-id="c3533-179">Hiermee maakt u een permanente verbinding met een lokale of externe computer.</span><span class="sxs-lookup"><span data-stu-id="c3533-179">Creates a persistent connection to a local or remote computer.</span></span>

### [<span data-ttu-id="c3533-180">New-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="c3533-180">New-PSSessionConfigurationFile</span></span>](New-PSSessionConfigurationFile.md)
<span data-ttu-id="c3533-181">Hiermee maakt u een bestand dat een sessie configuratie definieert.</span><span class="sxs-lookup"><span data-stu-id="c3533-181">Creates a file that defines a session configuration.</span></span>

### [<span data-ttu-id="c3533-182">New-PSSessionOption</span><span class="sxs-lookup"><span data-stu-id="c3533-182">New-PSSessionOption</span></span>](New-PSSessionOption.md)
<span data-ttu-id="c3533-183">Hiermee maakt u een object dat geavanceerde opties bevat voor een PSSession.</span><span class="sxs-lookup"><span data-stu-id="c3533-183">Creates an object that contains advanced options for a PSSession.</span></span>

### [<span data-ttu-id="c3533-184">New-PSTransportOption</span><span class="sxs-lookup"><span data-stu-id="c3533-184">New-PSTransportOption</span></span>](New-PSTransportOption.md)
<span data-ttu-id="c3533-185">Hiermee maakt u een object dat geavanceerde opties bevat voor een sessie configuratie.</span><span class="sxs-lookup"><span data-stu-id="c3533-185">Creates an object that contains advanced options for a session configuration.</span></span>

### [<span data-ttu-id="c3533-186">Out-standaard</span><span class="sxs-lookup"><span data-stu-id="c3533-186">Out-Default</span></span>](Out-Default.md)
<span data-ttu-id="c3533-187">Hiermee wordt de uitvoer naar de standaard Formatter en naar de standaard uitvoer-cmdlet verzonden.</span><span class="sxs-lookup"><span data-stu-id="c3533-187">Sends the output to the default formatter and to the default output cmdlet.</span></span>

### [<span data-ttu-id="c3533-188">Out-host</span><span class="sxs-lookup"><span data-stu-id="c3533-188">Out-Host</span></span>](Out-Host.md)
<span data-ttu-id="c3533-189">Verzendt uitvoer naar de opdracht regel.</span><span class="sxs-lookup"><span data-stu-id="c3533-189">Sends output to the command line.</span></span>

### [<span data-ttu-id="c3533-190">Out-Null</span><span class="sxs-lookup"><span data-stu-id="c3533-190">Out-Null</span></span>](Out-Null.md)
<span data-ttu-id="c3533-191">Hiermee verbergt u de uitvoer in plaats van deze te verzenden naar de pijp lijn of weer te geven.</span><span class="sxs-lookup"><span data-stu-id="c3533-191">Hides the output instead of sending it down the pipeline or displaying it.</span></span>

### [<span data-ttu-id="c3533-192">Receive-job</span><span class="sxs-lookup"><span data-stu-id="c3533-192">Receive-Job</span></span>](Receive-Job.md)
<span data-ttu-id="c3533-193">Hiermee worden de resultaten van de Power shell-achtergrond taken in de huidige sessie opgehaald.</span><span class="sxs-lookup"><span data-stu-id="c3533-193">Gets the results of the PowerShell background jobs in the current session.</span></span>

### [<span data-ttu-id="c3533-194">Receive-PSSession</span><span class="sxs-lookup"><span data-stu-id="c3533-194">Receive-PSSession</span></span>](Receive-PSSession.md)
<span data-ttu-id="c3533-195">Hiermee worden de resultaten van opdrachten in verbroken sessies opgehaald.</span><span class="sxs-lookup"><span data-stu-id="c3533-195">Gets results of commands in disconnected sessions.</span></span>

### [<span data-ttu-id="c3533-196">REGI ster-ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="c3533-196">Register-ArgumentCompleter</span></span>](Register-ArgumentCompleter.md)
<span data-ttu-id="c3533-197">Hiermee registreert u een volledig aangepaste argument.</span><span class="sxs-lookup"><span data-stu-id="c3533-197">Registers a custom argument completer.</span></span>

### [<span data-ttu-id="c3533-198">Register-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="c3533-198">Register-PSSessionConfiguration</span></span>](Register-PSSessionConfiguration.md)
<span data-ttu-id="c3533-199">Hiermee maakt en registreert u een nieuwe sessie configuratie.</span><span class="sxs-lookup"><span data-stu-id="c3533-199">Creates and registers a new session configuration.</span></span>

### [<span data-ttu-id="c3533-200">Verwijderen-taak</span><span class="sxs-lookup"><span data-stu-id="c3533-200">Remove-Job</span></span>](Remove-Job.md)
<span data-ttu-id="c3533-201">Hiermee verwijdert u een Power shell-achtergrond taak.</span><span class="sxs-lookup"><span data-stu-id="c3533-201">Deletes a PowerShell background job.</span></span>

### [<span data-ttu-id="c3533-202">Remove-module</span><span class="sxs-lookup"><span data-stu-id="c3533-202">Remove-Module</span></span>](Remove-Module.md)
<span data-ttu-id="c3533-203">Verwijdert modules uit de huidige sessie.</span><span class="sxs-lookup"><span data-stu-id="c3533-203">Removes modules from the current session.</span></span>

### [<span data-ttu-id="c3533-204">Remove-PSSession</span><span class="sxs-lookup"><span data-stu-id="c3533-204">Remove-PSSession</span></span>](Remove-PSSession.md)
<span data-ttu-id="c3533-205">Hiermee sluit u een of meer Power shell-sessies (PSSessions).</span><span class="sxs-lookup"><span data-stu-id="c3533-205">Closes one or more PowerShell sessions (PSSessions).</span></span>

### [<span data-ttu-id="c3533-206">Remove-PSSnapin</span><span class="sxs-lookup"><span data-stu-id="c3533-206">Remove-PSSnapin</span></span>](Remove-PSSnapin.md)
<span data-ttu-id="c3533-207">Hiermee verwijdert u de Windows Power shell-modules uit de huidige sessie.</span><span class="sxs-lookup"><span data-stu-id="c3533-207">Removes Windows PowerShell snap-ins from the current session.</span></span>

### [<span data-ttu-id="c3533-208">Resume-job</span><span class="sxs-lookup"><span data-stu-id="c3533-208">Resume-Job</span></span>](Resume-Job.md)
<span data-ttu-id="c3533-209">Hiermee wordt een onderbroken taak opnieuw gestart.</span><span class="sxs-lookup"><span data-stu-id="c3533-209">Restarts a suspended job.</span></span>

### [<span data-ttu-id="c3533-210">Opslaan-Help</span><span class="sxs-lookup"><span data-stu-id="c3533-210">Save-Help</span></span>](Save-Help.md)
<span data-ttu-id="c3533-211">Hiermee worden de nieuwste Help-bestanden gedownload en opgeslagen in een map van het bestands systeem.</span><span class="sxs-lookup"><span data-stu-id="c3533-211">Downloads and saves the newest help files to a file system directory.</span></span>

### [<span data-ttu-id="c3533-212">Set-PSDebug</span><span class="sxs-lookup"><span data-stu-id="c3533-212">Set-PSDebug</span></span>](Set-PSDebug.md)
<span data-ttu-id="c3533-213">Schakelt functies voor fout opsporing in scripts in-en uitschakelen, stelt het tracerings niveau in en schakelt de strikte modus in.</span><span class="sxs-lookup"><span data-stu-id="c3533-213">Turns script debugging features on and off, sets the trace level, and toggles strict mode.</span></span>

### [<span data-ttu-id="c3533-214">Set-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="c3533-214">Set-PSSessionConfiguration</span></span>](Set-PSSessionConfiguration.md)
<span data-ttu-id="c3533-215">Hiermee wijzigt u de eigenschappen van een geregistreerde sessie configuratie.</span><span class="sxs-lookup"><span data-stu-id="c3533-215">Changes the properties of a registered session configuration.</span></span>

### [<span data-ttu-id="c3533-216">Set-StrictMode</span><span class="sxs-lookup"><span data-stu-id="c3533-216">Set-StrictMode</span></span>](Set-StrictMode.md)
<span data-ttu-id="c3533-217">Hiermee worden code regels in expressies, scripts en script blokken vastgelegd en afgedwongen.</span><span class="sxs-lookup"><span data-stu-id="c3533-217">Establishes and enforces coding rules in expressions, scripts, and script blocks.</span></span>

### [<span data-ttu-id="c3533-218">Begin taak</span><span class="sxs-lookup"><span data-stu-id="c3533-218">Start-Job</span></span>](Start-Job.md)
<span data-ttu-id="c3533-219">Start een Power shell-achtergrond taak.</span><span class="sxs-lookup"><span data-stu-id="c3533-219">Starts a PowerShell background job.</span></span>

### [<span data-ttu-id="c3533-220">Stoppen-taak</span><span class="sxs-lookup"><span data-stu-id="c3533-220">Stop-Job</span></span>](Stop-Job.md)
<span data-ttu-id="c3533-221">Hiermee stopt u een Power shell-achtergrond taak.</span><span class="sxs-lookup"><span data-stu-id="c3533-221">Stops a PowerShell background job.</span></span>

### [<span data-ttu-id="c3533-222">Onderbreken-taak</span><span class="sxs-lookup"><span data-stu-id="c3533-222">Suspend-Job</span></span>](Suspend-Job.md)
<span data-ttu-id="c3533-223">Stopt werk stroom taken tijdelijk.</span><span class="sxs-lookup"><span data-stu-id="c3533-223">Temporarily stops workflow jobs.</span></span>

### [<span data-ttu-id="c3533-224">Test-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="c3533-224">Test-ModuleManifest</span></span>](Test-ModuleManifest.md)
<span data-ttu-id="c3533-225">Verifieert of een module manifest bestand nauw keurig de inhoud van een module beschrijft.</span><span class="sxs-lookup"><span data-stu-id="c3533-225">Verifies that a module manifest file accurately describes the contents of a module.</span></span>

### [<span data-ttu-id="c3533-226">Test-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="c3533-226">Test-PSSessionConfigurationFile</span></span>](Test-PSSessionConfigurationFile.md)
<span data-ttu-id="c3533-227">Verifieert de sleutels en waarden in een sessie configuratie bestand.</span><span class="sxs-lookup"><span data-stu-id="c3533-227">Verifies the keys and values in a session configuration file.</span></span>

### [<span data-ttu-id="c3533-228">Registratie ongedaan maken-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="c3533-228">Unregister-PSSessionConfiguration</span></span>](Unregister-PSSessionConfiguration.md)
<span data-ttu-id="c3533-229">Hiermee verwijdert u geregistreerde sessie configuraties van de computer.</span><span class="sxs-lookup"><span data-stu-id="c3533-229">Deletes registered session configurations from the computer.</span></span>

### [<span data-ttu-id="c3533-230">Update-Help</span><span class="sxs-lookup"><span data-stu-id="c3533-230">Update-Help</span></span>](Update-Help.md)
<span data-ttu-id="c3533-231">Downloadt en installeert de nieuwste Help-bestanden op uw computer.</span><span class="sxs-lookup"><span data-stu-id="c3533-231">Downloads and installs the newest help files on your computer.</span></span>

### [<span data-ttu-id="c3533-232">Wait-Job</span><span class="sxs-lookup"><span data-stu-id="c3533-232">Wait-Job</span></span>](Wait-Job.md)
<span data-ttu-id="c3533-233">Onderdrukt de opdracht prompt totdat een of alle Power shell-achtergrond taken die in de sessie worden uitgevoerd, zijn voltooid.</span><span class="sxs-lookup"><span data-stu-id="c3533-233">Suppresses the command prompt until one or all of the PowerShell background jobs running in the session are completed.</span></span>

### [<span data-ttu-id="c3533-234">Where-object</span><span class="sxs-lookup"><span data-stu-id="c3533-234">Where-Object</span></span>](Where-Object.md)
<span data-ttu-id="c3533-235">Selecteert objecten uit een verzameling op basis van de bijbehorende eigenschaps waarden.</span><span class="sxs-lookup"><span data-stu-id="c3533-235">Selects objects from a collection based on their property values.</span></span>
