reference/7.2/Microsoft.PowerShell.Core/Microsoft.PowerShell.Core.md
---
Download Help Link: https://aka.ms/powershell72-help
Help Version: 7.2.0.0
Locale: en-US
Module Guid: 00000000-0000-0000-0000-000000000000
Module Name: Microsoft.PowerShell.Core
ms.date: 02/28/2019
schema: 2.0.0
title: Micro soft. Power shell. core
ms.openlocfilehash: 5771c6f907ef38a166dd65ca55f90cbda62c690c
ms.sourcegitcommit: 95d41698c7a2450eeb70ef2fb6507fe7e6eff3b6
ms.translationtype: MT
ms.contentlocale: nl-NL
ms.lasthandoff: 11/17/2020
ms.locfileid: "94706064"
---
# <span data-ttu-id="470c6-102">Module micro soft. Power shell. core</span><span class="sxs-lookup"><span data-stu-id="470c6-102">Microsoft.PowerShell.Core Module</span></span>

## <span data-ttu-id="470c6-103">Description</span><span class="sxs-lookup"><span data-stu-id="470c6-103">Description</span></span>

<span data-ttu-id="470c6-104">Deze sectie bevat de Help-onderwerpen voor de cmdlets die zijn geïnstalleerd met de module Power shell micro soft. Power shell. core.</span><span class="sxs-lookup"><span data-stu-id="470c6-104">This section contains the help topics for the cmdlets that are installed with PowerShell Microsoft.PowerShell.Core module.</span></span> <span data-ttu-id="470c6-105">De kern module bevat cmdlets en providers die de basis functies van Power shell beheren.</span><span class="sxs-lookup"><span data-stu-id="470c6-105">The Core module contains cmdlets and providers that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="470c6-106">Micro soft. Power shell. core-cmdlets</span><span class="sxs-lookup"><span data-stu-id="470c6-106">Microsoft.PowerShell.Core Cmdlets</span></span>

### [<span data-ttu-id="470c6-107">Toevoegen-geschiedenis</span><span class="sxs-lookup"><span data-stu-id="470c6-107">Add-History</span></span>](Add-History.md)
<span data-ttu-id="470c6-108">Hiermee worden items toegevoegd aan de sessie geschiedenis.</span><span class="sxs-lookup"><span data-stu-id="470c6-108">Appends entries to the session history.</span></span>

### [<span data-ttu-id="470c6-109">Wissen-geschiedenis</span><span class="sxs-lookup"><span data-stu-id="470c6-109">Clear-History</span></span>](Clear-History.md)
<span data-ttu-id="470c6-110">Hiermee verwijdert u vermeldingen uit de geschiedenis van de Power shell-sessie opdracht.</span><span class="sxs-lookup"><span data-stu-id="470c6-110">Deletes entries from the PowerShell session command history.</span></span>

### [<span data-ttu-id="470c6-111">Wissen-host</span><span class="sxs-lookup"><span data-stu-id="470c6-111">Clear-Host</span></span>](Clear-Host.md)
<span data-ttu-id="470c6-112">Hiermee wordt de weer gave in het hostprogramma gewist.</span><span class="sxs-lookup"><span data-stu-id="470c6-112">Clears the display in the host program.</span></span>

### [<span data-ttu-id="470c6-113">Connect-PSSession</span><span class="sxs-lookup"><span data-stu-id="470c6-113">Connect-PSSession</span></span>](Connect-PSSession.md)
<span data-ttu-id="470c6-114">Opnieuw verbinding maken met verbroken sessies.</span><span class="sxs-lookup"><span data-stu-id="470c6-114">Reconnects to disconnected sessions.</span></span>

### [<span data-ttu-id="470c6-115">Fout opsporing-taak</span><span class="sxs-lookup"><span data-stu-id="470c6-115">Debug-Job</span></span>](Debug-Job.md)
<span data-ttu-id="470c6-116">De uitvoering van een actieve achtergrond, externe of Power shell-werk stroom taak wordt ongebruikt.</span><span class="sxs-lookup"><span data-stu-id="470c6-116">Debugs a running background, remote, or PowerShell Workflow job.</span></span>

### [<span data-ttu-id="470c6-117">Disable-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="470c6-117">Disable-ExperimentalFeature</span></span>](Disable-ExperimentalFeature.md)
<span data-ttu-id="470c6-118">Een experimentele functie uitschakelen bij het opstarten van een nieuw exemplaar van Power shell.</span><span class="sxs-lookup"><span data-stu-id="470c6-118">Disable an experimental feature on startup of new instance of PowerShell.</span></span>

### [<span data-ttu-id="470c6-119">Disable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="470c6-119">Disable-PSRemoting</span></span>](Disable-PSRemoting.md)
<span data-ttu-id="470c6-120">Hiermee voor komt u dat Power shell-eind punten externe verbindingen ontvangen.</span><span class="sxs-lookup"><span data-stu-id="470c6-120">Prevents PowerShell endpoints from receiving remote connections.</span></span>

### [<span data-ttu-id="470c6-121">Disable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="470c6-121">Disable-PSSessionConfiguration</span></span>](Disable-PSSessionConfiguration.md)
<span data-ttu-id="470c6-122">Hiermee schakelt u de sessie configuraties op de lokale computer uit.</span><span class="sxs-lookup"><span data-stu-id="470c6-122">Disables session configurations on the local computer.</span></span>

### [<span data-ttu-id="470c6-123">Verbinding verbreken-PSSession</span><span class="sxs-lookup"><span data-stu-id="470c6-123">Disconnect-PSSession</span></span>](Disconnect-PSSession.md)
<span data-ttu-id="470c6-124">Verbreekt de verbinding met een sessie.</span><span class="sxs-lookup"><span data-stu-id="470c6-124">Disconnects from a session.</span></span>

### [<span data-ttu-id="470c6-125">Enable-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="470c6-125">Enable-ExperimentalFeature</span></span>](Enable-ExperimentalFeature.md)
<span data-ttu-id="470c6-126">Een experimentele functie inschakelen bij het opstarten van een nieuw exemplaar van Power shell.</span><span class="sxs-lookup"><span data-stu-id="470c6-126">Enable an experimental feature on startup of new instance of PowerShell.</span></span>

### [<span data-ttu-id="470c6-127">Enable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="470c6-127">Enable-PSRemoting</span></span>](Enable-PSRemoting.md)
<span data-ttu-id="470c6-128">Hiermee configureert u de computer voor het ontvangen van externe opdrachten.</span><span class="sxs-lookup"><span data-stu-id="470c6-128">Configures the computer to receive remote commands.</span></span>

### [<span data-ttu-id="470c6-129">Enable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="470c6-129">Enable-PSSessionConfiguration</span></span>](Enable-PSSessionConfiguration.md)
<span data-ttu-id="470c6-130">Hiermee schakelt u de sessie configuraties in op de lokale computer.</span><span class="sxs-lookup"><span data-stu-id="470c6-130">Enables the session configurations on the local computer.</span></span>

### [<span data-ttu-id="470c6-131">Enter-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="470c6-131">Enter-PSHostProcess</span></span>](Enter-PSHostProcess.md)
<span data-ttu-id="470c6-132">Hiermee maakt u verbinding met en voert u een interactieve sessie in met een lokaal proces.</span><span class="sxs-lookup"><span data-stu-id="470c6-132">Connects to and enters into an interactive session with a local process.</span></span>

### [<span data-ttu-id="470c6-133">Enter-PSSession</span><span class="sxs-lookup"><span data-stu-id="470c6-133">Enter-PSSession</span></span>](Enter-PSSession.md)
<span data-ttu-id="470c6-134">Start een interactieve sessie met een externe computer.</span><span class="sxs-lookup"><span data-stu-id="470c6-134">Starts an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="470c6-135">Afsluiten-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="470c6-135">Exit-PSHostProcess</span></span>](Exit-PSHostProcess.md)
<span data-ttu-id="470c6-136">Hiermee sluit u een interactieve sessie met een lokaal proces.</span><span class="sxs-lookup"><span data-stu-id="470c6-136">Closes an interactive session with a local process.</span></span>

### [<span data-ttu-id="470c6-137">Afsluiten-PSSession</span><span class="sxs-lookup"><span data-stu-id="470c6-137">Exit-PSSession</span></span>](Exit-PSSession.md)
<span data-ttu-id="470c6-138">Hiermee beëindigt u een interactieve sessie met een externe computer.</span><span class="sxs-lookup"><span data-stu-id="470c6-138">Ends an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="470c6-139">Exporteren-ModuleMember</span><span class="sxs-lookup"><span data-stu-id="470c6-139">Export-ModuleMember</span></span>](Export-ModuleMember.md)
<span data-ttu-id="470c6-140">Hiermee geeft u de module leden op die worden geëxporteerd.</span><span class="sxs-lookup"><span data-stu-id="470c6-140">Specifies the module members that are exported.</span></span>

### [<span data-ttu-id="470c6-141">ForEach-object</span><span class="sxs-lookup"><span data-stu-id="470c6-141">ForEach-Object</span></span>](ForEach-Object.md)
<span data-ttu-id="470c6-142">Hiermee wordt een bewerking uitgevoerd voor elk item in een verzameling invoer objecten.</span><span class="sxs-lookup"><span data-stu-id="470c6-142">Performs an operation against each item in a collection of input objects.</span></span>

### [<span data-ttu-id="470c6-143">Get-Command</span><span class="sxs-lookup"><span data-stu-id="470c6-143">Get-Command</span></span>](Get-Command.md)
<span data-ttu-id="470c6-144">Hiermee worden alle opdrachten opgehaald.</span><span class="sxs-lookup"><span data-stu-id="470c6-144">Gets all commands.</span></span>

### [<span data-ttu-id="470c6-145">Get-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="470c6-145">Get-ExperimentalFeature</span></span>](Get-ExperimentalFeature.md)
<span data-ttu-id="470c6-146">Hiermee worden experimentele functies opgehaald.</span><span class="sxs-lookup"><span data-stu-id="470c6-146">Gets experimental features.</span></span>

### [<span data-ttu-id="470c6-147">Get-Help</span><span class="sxs-lookup"><span data-stu-id="470c6-147">Get-Help</span></span>](Get-Help.md)
<span data-ttu-id="470c6-148">Geeft informatie weer over Power shell-opdrachten en-concepten.</span><span class="sxs-lookup"><span data-stu-id="470c6-148">Displays information about PowerShell commands and concepts.</span></span>

### [<span data-ttu-id="470c6-149">Get-geschiedenis</span><span class="sxs-lookup"><span data-stu-id="470c6-149">Get-History</span></span>](Get-History.md)
<span data-ttu-id="470c6-150">Hiermee wordt een lijst opgehaald met de opdrachten die tijdens de huidige sessie zijn ingevoerd.</span><span class="sxs-lookup"><span data-stu-id="470c6-150">Gets a list of the commands entered during the current session.</span></span>

### [<span data-ttu-id="470c6-151">Get-job</span><span class="sxs-lookup"><span data-stu-id="470c6-151">Get-Job</span></span>](Get-Job.md)
<span data-ttu-id="470c6-152">Hiermee worden Power shell-achtergrond taken opgehaald die in de huidige sessie worden uitgevoerd.</span><span class="sxs-lookup"><span data-stu-id="470c6-152">Gets PowerShell background jobs that are running in the current session.</span></span>

### [<span data-ttu-id="470c6-153">Get-module</span><span class="sxs-lookup"><span data-stu-id="470c6-153">Get-Module</span></span>](Get-Module.md)
<span data-ttu-id="470c6-154">Hiermee worden de modules opgehaald die zijn geïmporteerd of die in de huidige sessie kunnen worden geïmporteerd.</span><span class="sxs-lookup"><span data-stu-id="470c6-154">Gets the modules that have been imported or that can be imported into the current session.</span></span>

### [<span data-ttu-id="470c6-155">Get-PSHostProcessInfo</span><span class="sxs-lookup"><span data-stu-id="470c6-155">Get-PSHostProcessInfo</span></span>](Get-PSHostProcessInfo.md)
<span data-ttu-id="470c6-156">Hiermee wordt proces informatie over de Power shell-host opgehaald.</span><span class="sxs-lookup"><span data-stu-id="470c6-156">Gets process information about the PowerShell host.</span></span>

### [<span data-ttu-id="470c6-157">Get-PSSession</span><span class="sxs-lookup"><span data-stu-id="470c6-157">Get-PSSession</span></span>](Get-PSSession.md)
<span data-ttu-id="470c6-158">Hiermee haalt u de Power shell-sessies op lokale en externe computers op.</span><span class="sxs-lookup"><span data-stu-id="470c6-158">Gets the PowerShell sessions on local and remote computers.</span></span>

### [<span data-ttu-id="470c6-159">Get-PSSessionCapability</span><span class="sxs-lookup"><span data-stu-id="470c6-159">Get-PSSessionCapability</span></span>](Get-PSSessionCapability.md)
<span data-ttu-id="470c6-160">Hiermee worden de mogelijkheden van een specifieke gebruiker voor een beperkte sessie configuratie opgehaald.</span><span class="sxs-lookup"><span data-stu-id="470c6-160">Gets the capabilities of a specific user on a constrained session configuration.</span></span>

### [<span data-ttu-id="470c6-161">Get-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="470c6-161">Get-PSSessionConfiguration</span></span>](Get-PSSessionConfiguration.md)
<span data-ttu-id="470c6-162">Hiermee worden de geregistreerde sessie configuraties op de computer opgehaald.</span><span class="sxs-lookup"><span data-stu-id="470c6-162">Gets the registered session configurations on the computer.</span></span>

### [<span data-ttu-id="470c6-163">Import-module</span><span class="sxs-lookup"><span data-stu-id="470c6-163">Import-Module</span></span>](Import-Module.md)
<span data-ttu-id="470c6-164">Hiermee voegt u modules toe aan de huidige sessie.</span><span class="sxs-lookup"><span data-stu-id="470c6-164">Adds modules to the current session.</span></span>

### [<span data-ttu-id="470c6-165">Invoke-opdracht</span><span class="sxs-lookup"><span data-stu-id="470c6-165">Invoke-Command</span></span>](Invoke-Command.md)
<span data-ttu-id="470c6-166">Voert opdrachten uit op lokale en externe computers.</span><span class="sxs-lookup"><span data-stu-id="470c6-166">Runs commands on local and remote computers.</span></span>

### [<span data-ttu-id="470c6-167">Invoke-geschiedenis</span><span class="sxs-lookup"><span data-stu-id="470c6-167">Invoke-History</span></span>](Invoke-History.md)
<span data-ttu-id="470c6-168">Voert opdrachten uit vanuit de sessie geschiedenis.</span><span class="sxs-lookup"><span data-stu-id="470c6-168">Runs commands from the session history.</span></span>

### [<span data-ttu-id="470c6-169">New-module</span><span class="sxs-lookup"><span data-stu-id="470c6-169">New-Module</span></span>](New-Module.md)
<span data-ttu-id="470c6-170">Hiermee maakt u een nieuwe dynamische module die alleen in het geheugen bestaat.</span><span class="sxs-lookup"><span data-stu-id="470c6-170">Creates a new dynamic module that exists only in memory.</span></span>

### [<span data-ttu-id="470c6-171">New-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="470c6-171">New-ModuleManifest</span></span>](New-ModuleManifest.md)
<span data-ttu-id="470c6-172">Hiermee maakt u een nieuw module manifest.</span><span class="sxs-lookup"><span data-stu-id="470c6-172">Creates a new module manifest.</span></span>

### [<span data-ttu-id="470c6-173">New-PSRoleCapabilityFile</span><span class="sxs-lookup"><span data-stu-id="470c6-173">New-PSRoleCapabilityFile</span></span>](New-PSRoleCapabilityFile.md)
<span data-ttu-id="470c6-174">Hiermee maakt u een bestand dat een set mogelijkheden definieert die moeten worden weer gegeven via een sessie configuratie.</span><span class="sxs-lookup"><span data-stu-id="470c6-174">Creates a file that defines a set of capabilities to be exposed through a session configuration.</span></span>

### [<span data-ttu-id="470c6-175">New-PSSession</span><span class="sxs-lookup"><span data-stu-id="470c6-175">New-PSSession</span></span>](New-PSSession.md)
<span data-ttu-id="470c6-176">Hiermee maakt u een permanente verbinding met een lokale of externe computer.</span><span class="sxs-lookup"><span data-stu-id="470c6-176">Creates a persistent connection to a local or remote computer.</span></span>

### [<span data-ttu-id="470c6-177">New-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="470c6-177">New-PSSessionConfigurationFile</span></span>](New-PSSessionConfigurationFile.md)
<span data-ttu-id="470c6-178">Hiermee maakt u een bestand dat een sessie configuratie definieert.</span><span class="sxs-lookup"><span data-stu-id="470c6-178">Creates a file that defines a session configuration.</span></span>

### [<span data-ttu-id="470c6-179">New-PSSessionOption</span><span class="sxs-lookup"><span data-stu-id="470c6-179">New-PSSessionOption</span></span>](New-PSSessionOption.md)
<span data-ttu-id="470c6-180">Hiermee maakt u een object dat geavanceerde opties bevat voor een PSSession.</span><span class="sxs-lookup"><span data-stu-id="470c6-180">Creates an object that contains advanced options for a PSSession.</span></span>

### [<span data-ttu-id="470c6-181">New-PSTransportOption</span><span class="sxs-lookup"><span data-stu-id="470c6-181">New-PSTransportOption</span></span>](New-PSTransportOption.md)
<span data-ttu-id="470c6-182">Hiermee maakt u een object dat geavanceerde opties bevat voor een sessie configuratie.</span><span class="sxs-lookup"><span data-stu-id="470c6-182">Creates an object that contains advanced options for a session configuration.</span></span>

### [<span data-ttu-id="470c6-183">Out-standaard</span><span class="sxs-lookup"><span data-stu-id="470c6-183">Out-Default</span></span>](Out-Default.md)
<span data-ttu-id="470c6-184">Hiermee wordt de uitvoer naar de standaard Formatter en naar de standaard uitvoer-cmdlet verzonden.</span><span class="sxs-lookup"><span data-stu-id="470c6-184">Sends the output to the default formatter and to the default output cmdlet.</span></span>

### [<span data-ttu-id="470c6-185">Out-host</span><span class="sxs-lookup"><span data-stu-id="470c6-185">Out-Host</span></span>](Out-Host.md)
<span data-ttu-id="470c6-186">Verzendt uitvoer naar de opdracht regel.</span><span class="sxs-lookup"><span data-stu-id="470c6-186">Sends output to the command line.</span></span>

### [<span data-ttu-id="470c6-187">Out-Null</span><span class="sxs-lookup"><span data-stu-id="470c6-187">Out-Null</span></span>](Out-Null.md)
<span data-ttu-id="470c6-188">Hiermee verbergt u de uitvoer in plaats van deze te verzenden naar de pijp lijn of weer te geven.</span><span class="sxs-lookup"><span data-stu-id="470c6-188">Hides the output instead of sending it down the pipeline or displaying it.</span></span>

### [<span data-ttu-id="470c6-189">Receive-job</span><span class="sxs-lookup"><span data-stu-id="470c6-189">Receive-Job</span></span>](Receive-Job.md)
<span data-ttu-id="470c6-190">Hiermee worden de resultaten van de Power shell-achtergrond taken in de huidige sessie opgehaald.</span><span class="sxs-lookup"><span data-stu-id="470c6-190">Gets the results of the PowerShell background jobs in the current session.</span></span>

### [<span data-ttu-id="470c6-191">Receive-PSSession</span><span class="sxs-lookup"><span data-stu-id="470c6-191">Receive-PSSession</span></span>](Receive-PSSession.md)
<span data-ttu-id="470c6-192">Hiermee worden de resultaten van opdrachten in verbroken sessies opgehaald</span><span class="sxs-lookup"><span data-stu-id="470c6-192">Gets results of commands in disconnected sessions</span></span>

### [<span data-ttu-id="470c6-193">REGI ster-ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="470c6-193">Register-ArgumentCompleter</span></span>](Register-ArgumentCompleter.md)
<span data-ttu-id="470c6-194">Hiermee registreert u een volledig aangepaste argument.</span><span class="sxs-lookup"><span data-stu-id="470c6-194">Registers a custom argument completer.</span></span>

### [<span data-ttu-id="470c6-195">Register-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="470c6-195">Register-PSSessionConfiguration</span></span>](Register-PSSessionConfiguration.md)
<span data-ttu-id="470c6-196">Hiermee maakt en registreert u een nieuwe sessie configuratie.</span><span class="sxs-lookup"><span data-stu-id="470c6-196">Creates and registers a new session configuration.</span></span>

### [<span data-ttu-id="470c6-197">Verwijderen-taak</span><span class="sxs-lookup"><span data-stu-id="470c6-197">Remove-Job</span></span>](Remove-Job.md)
<span data-ttu-id="470c6-198">Hiermee verwijdert u een Power shell-achtergrond taak.</span><span class="sxs-lookup"><span data-stu-id="470c6-198">Deletes a PowerShell background job.</span></span>

### [<span data-ttu-id="470c6-199">Remove-module</span><span class="sxs-lookup"><span data-stu-id="470c6-199">Remove-Module</span></span>](Remove-Module.md)
<span data-ttu-id="470c6-200">Verwijdert modules uit de huidige sessie.</span><span class="sxs-lookup"><span data-stu-id="470c6-200">Removes modules from the current session.</span></span>

### [<span data-ttu-id="470c6-201">Remove-PSSession</span><span class="sxs-lookup"><span data-stu-id="470c6-201">Remove-PSSession</span></span>](Remove-PSSession.md)
<span data-ttu-id="470c6-202">Hiermee sluit u een of meer Power shell-sessies (PSSessions).</span><span class="sxs-lookup"><span data-stu-id="470c6-202">Closes one or more PowerShell sessions (PSSessions).</span></span>

### [<span data-ttu-id="470c6-203">Opslaan-Help</span><span class="sxs-lookup"><span data-stu-id="470c6-203">Save-Help</span></span>](Save-Help.md)
<span data-ttu-id="470c6-204">Hiermee worden de nieuwste Help-bestanden gedownload en opgeslagen in een map van het bestands systeem.</span><span class="sxs-lookup"><span data-stu-id="470c6-204">Downloads and saves the newest help files to a file system directory.</span></span>

### [<span data-ttu-id="470c6-205">Set-PSDebug</span><span class="sxs-lookup"><span data-stu-id="470c6-205">Set-PSDebug</span></span>](Set-PSDebug.md)
<span data-ttu-id="470c6-206">Schakelt functies voor fout opsporing in scripts in-en uitschakelen, stelt het tracerings niveau in en schakelt de strikte modus in.</span><span class="sxs-lookup"><span data-stu-id="470c6-206">Turns script debugging features on and off, sets the trace level, and toggles strict mode.</span></span>

### [<span data-ttu-id="470c6-207">Set-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="470c6-207">Set-PSSessionConfiguration</span></span>](Set-PSSessionConfiguration.md)
<span data-ttu-id="470c6-208">Hiermee wijzigt u de eigenschappen van een geregistreerde sessie configuratie.</span><span class="sxs-lookup"><span data-stu-id="470c6-208">Changes the properties of a registered session configuration.</span></span>

### [<span data-ttu-id="470c6-209">Set-StrictMode</span><span class="sxs-lookup"><span data-stu-id="470c6-209">Set-StrictMode</span></span>](Set-StrictMode.md)
<span data-ttu-id="470c6-210">Hiermee worden code regels in expressies, scripts en script blokken vastgelegd en afgedwongen.</span><span class="sxs-lookup"><span data-stu-id="470c6-210">Establishes and enforces coding rules in expressions, scripts, and script blocks.</span></span>

### [<span data-ttu-id="470c6-211">Begin taak</span><span class="sxs-lookup"><span data-stu-id="470c6-211">Start-Job</span></span>](Start-Job.md)
<span data-ttu-id="470c6-212">Start een Power shell-achtergrond taak.</span><span class="sxs-lookup"><span data-stu-id="470c6-212">Starts a PowerShell background job.</span></span>

### [<span data-ttu-id="470c6-213">Stoppen-taak</span><span class="sxs-lookup"><span data-stu-id="470c6-213">Stop-Job</span></span>](Stop-Job.md)
<span data-ttu-id="470c6-214">Hiermee stopt u een Power shell-achtergrond taak.</span><span class="sxs-lookup"><span data-stu-id="470c6-214">Stops a PowerShell background job.</span></span>

### [<span data-ttu-id="470c6-215">Test-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="470c6-215">Test-ModuleManifest</span></span>](Test-ModuleManifest.md)
<span data-ttu-id="470c6-216">Verifieert of een module manifest bestand nauw keurig de inhoud van een module beschrijft.</span><span class="sxs-lookup"><span data-stu-id="470c6-216">Verifies that a module manifest file accurately describes the contents of a module.</span></span>

### [<span data-ttu-id="470c6-217">Test-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="470c6-217">Test-PSSessionConfigurationFile</span></span>](Test-PSSessionConfigurationFile.md)
<span data-ttu-id="470c6-218">Verifieert de sleutels en waarden in een sessie configuratie bestand.</span><span class="sxs-lookup"><span data-stu-id="470c6-218">Verifies the keys and values in a session configuration file.</span></span>

### [<span data-ttu-id="470c6-219">Registratie ongedaan maken-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="470c6-219">Unregister-PSSessionConfiguration</span></span>](Unregister-PSSessionConfiguration.md)
<span data-ttu-id="470c6-220">Hiermee verwijdert u geregistreerde sessie configuraties van de computer.</span><span class="sxs-lookup"><span data-stu-id="470c6-220">Deletes registered session configurations from the computer.</span></span>

### [<span data-ttu-id="470c6-221">Update-Help</span><span class="sxs-lookup"><span data-stu-id="470c6-221">Update-Help</span></span>](Update-Help.md)
<span data-ttu-id="470c6-222">Downloadt en installeert de nieuwste Help-bestanden op uw computer.</span><span class="sxs-lookup"><span data-stu-id="470c6-222">Downloads and installs the newest help files on your computer.</span></span>

### [<span data-ttu-id="470c6-223">Wait-Job</span><span class="sxs-lookup"><span data-stu-id="470c6-223">Wait-Job</span></span>](Wait-Job.md)
<span data-ttu-id="470c6-224">Onderdrukt de opdracht prompt totdat een of alle Power shell-achtergrond taken die in de sessie worden uitgevoerd, zijn voltooid.</span><span class="sxs-lookup"><span data-stu-id="470c6-224">Suppresses the command prompt until one or all of the PowerShell background jobs running in the session are completed.</span></span>

### [<span data-ttu-id="470c6-225">Where-object</span><span class="sxs-lookup"><span data-stu-id="470c6-225">Where-Object</span></span>](Where-Object.md)
<span data-ttu-id="470c6-226">Selecteert objecten uit een verzameling op basis van de bijbehorende eigenschaps waarden.</span><span class="sxs-lookup"><span data-stu-id="470c6-226">Selects objects from a collection based on their property values.</span></span>

